--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.3.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10"
