--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shubhank Khare",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.3.1",
