--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-mongodb-session": "^2.3.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
@@ -23,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mkdirp": "^1.0.4",
     "mongodb": "^3.5.6",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "node-cron": "^2.0.3"
   }
 }
